# facelo-backend

./: .gitignore  Dockerfile  Pipfile  autoapp.py  pyproject.toml
facelo/: __init__.py  app.py  commands.py  constants.py  database.py  debug.py  definitions.py  exceptions.py  extensions.py  models.py  settings.py  utils.py
facelo/challenge/: __init__.py  generate.py  models.py  serializers.py  views.py
facelo/image/: __init__.py  models.py  serializers.py  views.py
facelo/question/: __init__.py  models.py  serializers.py  views.py
facelo/trial/: __init__.py  models.py  serializers.py  views.py
facelo/user/: models.py  serializers.py  views.py
factories/: __init__.py  factories.py  utils.py
migrations/: env.py
migrations/versions/: b576f1a7fa72_.py  d8e818b5f3fa_.py  f45ad4e897c9_.py
tests/: conftest.py  factories.py  pytest.ini  test_authentication.py  test_big.py  test_config.py  test_image.py  test_models.py  test_question.py  test_serializers.py  test_trial.py
tests/functionality/: conftest.py  test_generate.py  test_rename_file.py
tests/functionality/routes/: conftest.py  test_authentication.py  test_challenge.py  test_image.py  test_question.py  test_trial.py
