[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.yapf]
based_on_style = "google"
column_limit = 79

[tool.isort]
skip = "facelo/app.py"

[tool.poetry]
package-mode = false

[project]
name = "facelo"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<4"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-cors",
    "python-dotenv",
    "flask-bcrypt",
    "flask-jwt-extended",
    "flask-migrate",
    "flask-apispec"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "factory_boy",
    "flake8",
    "isort",
    "monkeytype",
    "setuptools",
    "wheel",
]
